# sistema-de-lanchonete

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  build_minikube.sh  deployment.yml  docker-compose.yml  eks_deployment.yml  install_minikube_windows.ps1  load_generator.ps1  load_generator.sh  package-lock.json  package.json  pontos_para_refatorar.md  requests.rest  start_linux.sh  start_windows.ps1  tsconfig.json  update_deployment.sh
.docker/: Dockerfile  database_structure.sql
.github/: ci_cd.yml
.github/workflows/: build_and_push_to_ecr.yml  ci_cd.yml  terraform.yml
docs/: ExecuÃ§Ã£o e Entrega_2023-10-27.dst  Fiap_TechChallenge_G27.postman_collection.json  Pedido e Pagamento_2023-10-27.dst
kubernetes/: comandos.md
kubernetes/backend/: backend_deployment.yaml  backend_service.yml  secretproviderclass.yaml
kubernetes/load_generator/: load_generator_deployment.yml
kubernetes/payment-mock/: payment-mock-deployment.yaml  payment-mock-service.yml
kubernetes/postgresql/: database_structure.sql  postgresql_deployment.yml  postgresql_service.yml
payment-mock/: Dockerfile  main.py  pyproject.toml
scripts/: load_generator.ps1
src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
src/driver/: app.controller.spec.ts
terraform/: .terraform.lock.hcl  awsapigateway.tf  backend.tf  cognito.tf  ecr.tf  eks.tf  iam.tf  lambda.tf  layer.tf  main.tf  rds.tf  terraform.tfstate  terraform.tfstate.backup  var.tf  variables.tf  vpc.tf
terraform/lambda/: index.js  package.json  (+1 more)
test/: app.e2e-spec.ts
(+162 files in other folders)
