[tool.poetry]
name = "payment-mock"
version = "0.1.0"
description = "0.0.1"
authors = ["Matheus de Mello Vieira <mellomatheus67@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
